--- a/core/templates/list.html
+++ b/core/templates/list.html
@@ -18,7 +18,7 @@
                 </div>
 
                 <div class="col text-end">
-                    <a href="{% url 'core:create' app model|getattr:'_meta'|getattr:'model_name' %}" class="btn btn-light-success btn-lg">{% trans 'Create' %}</a>
+                    <a href="{% url 'core:create' app model|getattr:'_meta'|getattr:'model_name' %}" class="btn btn-light-success btn-lg">{% trans 'Creer' %}</a>
                 </div>
             </div>
         </div>
