--- a/core/templates/components/timeline.html
+++ b/core/templates/components/timeline.html
@@ -2,25 +2,29 @@
 
 {% with self.approbations as approbations %}
     {% if approbations %}
-        <div class="col">
-            <h4>{% trans 'Approbation' %}</h4>
-            <ul class="timeline">
-                {% for approval in approbations %}
-                    <li>
-                        {{ approval.user.employee|default:approval.user }}
-                        <span class="text-info" 
-                            data-bs-toggle="tooltip" 
-                            data-bs-placement="bottom"
-                            data-bs-original-title="{{ approval.comment }}"
-                            title="{{ approval.comment }}"
-                            style="cursor: pointer;"
-                            >({{ approval.get_action_display|default:'aucune action' }})</span>
-                    </li>
-                {% endfor %}
-            </ul>
-            <script>
-                $(() => $('[data-bs-toggle="tooltip"]').tooltip());
-            </script>
+    <div class="card">
+        <div class="card-body">
+            <div class="col">
+                <h4>{% trans 'Approbation' %}</h4>
+                <ul class="timeline">
+                    {% for approval in approbations %}
+                        <li>
+                            {{ approval.user.employee|default:approval.user }}
+                            <span class="text-info" 
+                                data-bs-toggle="tooltip" 
+                                data-bs-placement="bottom"
+                                data-bs-original-title="{{ approval.comment }}"
+                                title="{{ approval.comment }}"
+                                style="cursor: pointer;"
+                                >({{ approval.get_action_display|default:'aucune action' }})</span>
+                        </li>
+                    {% endfor %}
+                </ul>
+                <script>
+                    $(() => $('[data-bs-toggle="tooltip"]').tooltip());
+                </script>
+            </div>
         </div>
+    </div>
     {% endif %}
 {% endwith %}
